--- a/WeatherApp/MVVM/Views/WeatherView.xaml
+++ b/WeatherApp/MVVM/Views/WeatherView.xaml
@@ -2,36 +2,107 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="WeatherApp.MVVM.Views.WeatherView"
+             xmlns:converters="clr-namespace:WeatherApp.Converters"
              xmlns:skia="clr-namespace:SkiaSharp.Extended.UI.Controls;assembly=SkiaSharp.Extended.UI"
              Title="WeatherView">
 
-  <Grid Margin="15" RowDefinitions=".08*,.1*,.5*,.1*,.3*">
-      <Grid>
-          <Frame/>
-          <SearchBar Placeholder="Search" VerticalOptions="Center"></SearchBar>
-      </Grid>
-      <VerticalStackLayout Grid.Row="1" Style="{StaticResource MainStackLayout}">
-          <Label Text="Paris" Style="{StaticResource Title}"/>
-          <Label Text="July 20250"/>
+    <ContentPage.Resources>
+        <converters:CodeToWeatherConverter x:Key="CodeToWeatherConverter"/>
+        <converters:CodeToImageConverter x:Key="CodeToImageConverter"/>
+    </ContentPage.Resources>
+
+    
+
+    <!-- Grid with specified rows and margins -->
+    <Grid Margin="15" RowDefinitions=".08*,.2*,.6*,.1*,.3*">
+        <!-- Nested Grid with a Frame and a SearchBar -->
+        <Grid>
+            <Frame />
+            <SearchBar
+                x:Name="searchBar"
+                Placeholder="Search"
+                SearchCommand="{Binding SearchCommand}"
+                SearchCommandParameter="{Binding Source={x:Reference searchBar}, Path=Text}"
+                VerticalOptions="Center" />
+        </Grid>
 
 
-      </VerticalStackLayout>
-      <skia:SKLottieView
-          Grid.Row="2"
-          RepeatCount="-1"
-          Source="sunny.json"/>
-      <Grid Grid.Row="3" ColumnDefinitions="*,*,*">
-          <VerticalStackLayout HorizontalOptions="Center" Spacing="10">
-              <Label >
+
+        <!-- VerticalStackLayout in the second row with a style -->
+        <VerticalStackLayout Grid.Row="1" Style="{StaticResource MainStackLayout}">
+            <Label Style="{StaticResource Title}"  Text="{Binding PlaceName}"/>
+            <Label Text="{Binding Date, StringFormat='{0: MMMM dd, yyyy}'}"/>
+        </VerticalStackLayout>
 
 
-              </Label>
+
+        <!-- SKLottieView in the third row with specified source and repeat count -->
+        <skia:SKLottieView
+            Grid.Row="2" RepeatCount="-1" Source="{Binding WeatherData.current.weather_code, Converter={StaticResource CodeToImageConverter}}"/>
 
 
-          </VerticalStackLayout>
+
+        <!-- Grid in the fourth row with three columns -->
+        <Grid Grid.Row="3" ColumnDefinitions="*,*,*">
+            <!-- VerticalStackLayout in the first column with Labels -->
+            <VerticalStackLayout HorizontalOptions="Center" Spacing="10">
+                <Label Style="{StaticResource WeatherTitle}" Text="Temp" />
+                <Label Style="{StaticResource WeatherValue}" Text="{Binding WeatherData.current.temperature_2m, StringFormat='{0}°c'}"/>
+            </VerticalStackLayout>
+
+            <!-- VerticalStackLayout in the second column with Labels -->
+            <VerticalStackLayout Grid.Column="1" HorizontalOptions="Center" Spacing="10">
+                <Label Style="{StaticResource WeatherTitle}" Text="Wind" />
+                <Label Style="{StaticResource WeatherValue}" Text="{Binding WeatherData.current.wind_speed_10m, StringFormat='{0}km/h'}"/>
+            </VerticalStackLayout>
+
+            <!-- VerticalStackLayout in the third column with Labels -->
+            <VerticalStackLayout Grid.Column="2" HorizontalOptions="Center" Spacing="10">
+                <Label Style="{StaticResource WeatherTitle}" Text="Weather Code" />
+                <Label Style="{StaticResource WeatherValue}" Text="{Binding WeatherData.current.weather_code, Converter={StaticResource CodeToWeatherConverter} }"/>
+            </VerticalStackLayout>
+        </Grid>
 
 
-      </Grid>
 
-  </Grid>
+        <!-- CollectionView in the fifth row -->
+        <CollectionView Grid.Row="4" ItemsSource="{Binding WeatherData.nextdays}">
+            <!-- Setting the items source as an array of strings -->
+            <!--<CollectionView.ItemsSource>
+                <x:Array Type="{x:Type x:String}">
+                    <x:String>1</x:String>
+                    <x:String>2</x:String>
+                    <x:String>3</x:String>
+                    <x:String>4</x:String>
+                    <x:String>5</x:String>
+                </x:Array>
+            </CollectionView.ItemsSource>-->
+
+            <!-- Configuring the layout of collection items -->
+            <CollectionView.ItemsLayout>
+                <LinearItemsLayout ItemSpacing="10" Orientation="Horizontal"/>
+            </CollectionView.ItemsLayout>
+
+            <!-- Defining the item template for each collection item -->
+            <CollectionView.ItemTemplate>
+                <DataTemplate>
+                    <Frame Style="{StaticResource Card}" VerticalOptions="Center">
+                        <VerticalStackLayout Spacing="5" VerticalOptions="Center">
+                            <!-- SKLottieView within the item template -->
+                            <skia:SKLottieView
+                                IsAnimationEnabled="True"
+                                HeightRequest="50"
+                                WidthRequest="50"
+                                Source="{Binding weather_code, Converter={StaticResource CodeToImageConverter}}"/>
+                            <!-- Labels within the item template -->
+                            <Label Text="{Binding time}" TextColor="{StaticResource }"/>
+                            <Label Text="{Binding temperature_2m_max, StringFormat='{0}°C'}"/>
+                            <Label Text="{Binding weather_code, Converter={StaticResource CodeToWeatherConverter}}" />
+                        </VerticalStackLayout>
+                    </Frame>
+                </DataTemplate>
+            </CollectionView.ItemTemplate>
+        </CollectionView>
+    </Grid>
 </ContentPage>
+
