--- a/WeatherApp/Resources/Styles/AppStyles.xaml
+++ b/WeatherApp/Resources/Styles/AppStyles.xaml
@@ -1,14 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <?xaml-comp compile="true" ?>
 <ResourceDictionary xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             >
+                    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
+
+    <!-- Style for VerticalStackLayout with a key "MainStackLayout" -->
     <Style x:Key="MainStackLayout" TargetType="VerticalStackLayout">
         <Setter Property="Margin" Value="0,10,0,0"/>
         <Setter Property="Spacing" Value="15"/>
         <Setter Property="VerticalOptions" Value="Center"/>
     </Style>
 
+    <!-- Style for all Label elements -->
     <Style TargetType="Label">
         <Setter Property="TextColor" Value="{StaticResource White}"/>
         <Setter Property="FontFamily" Value="RufinaRegular"/>
@@ -16,9 +18,34 @@
         <Setter Property="VerticalOptions" Value="Center"/>
     </Style>
 
-     <Style x:Key="Title" TargetType="Label">
+    <!-- Style for Label elements with a key "Title" -->
+    <Style x:Key="Title" TargetType="Label">
         <Setter Property="FontAttributes" Value="Bold"/>
         <Setter Property="FontSize" Value="Large"/>
     </Style>
 
+    <!-- Style for Label elements with a key "WeatherTitle" -->
+    <Style x:Key="WeatherTitle" TargetType="Label">
+        <Setter Property="FontFamily" Value="RufinaRegualr"/>
+    </Style>
+
+    <!-- Style for Label elements with a key "WeatherValue" -->
+    <Style x:Key="WeatherValue" TargetType="Label">
+        <Setter Property="FontFamily" Value="RufinaBold"/>
+    </Style>
+
+    <Style x:Key="Card" TargetType="Frame">
+        <Setter Property="Padding" Value="10"/>
+        <Setter Property="BackgroundColor" Value="{StaticResource DarkSecondaryColor} "/>
+        <Setter Property="BorderColor" Value="Transparent"/>
+        <Setter Property="CornerRadius" Value="25"/>
+        <Setter Property="HeightRequest" Value="150"/>
+        <Setter Property="WidthRequest" Value="150"/>
+        
+    </Style>
+
+    
+
+
+  
 </ResourceDictionary>
