--- a/WeatherApp/Resources/Styles/AppStyles.xaml
+++ b/WeatherApp/Resources/Styles/AppStyles.xaml
@@ -19,19 +19,9 @@
     </Style>
 
     <!-- Style for Label elements with a key "Title" -->
-    <Style x:Key="LocationTitle" TargetType="Label">
+    <Style x:Key="Title" TargetType="Label">
         <Setter Property="FontAttributes" Value="Bold"/>
         <Setter Property="FontSize" Value="Large"/>
-    </Style>
-
-    <Style x:Key="TemperatureTitle" TargetType="Label">
-        <Setter Property="FontAttributes" Value="Bold"/>
-        <Setter Property="FontSize" Value="50"/> <!-- Set to an absolute value, adjust as needed -->
-    </Style>
-
-    <Style x:Key="TemperatureDescription" TargetType="Label">
-        <Setter Property="FontAttributes" Value="Bold"/>
-        <Setter Property="FontSize" Value="30"/> <!-- Set to an absolute value, adjust as needed -->
     </Style>
 
     <Style x:Key="DailyMax" TargetType="Label">
