Working with differnet colours now

--- a/WeatherApp/MVVM/Views/LoginView.xaml
+++ b/WeatherApp/MVVM/Views/LoginView.xaml
@@ -2,6 +2,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:WeatherApp.MVVM.Views"
              x:Class="WeatherApp.MVVM.Views.LoginView"
+             Title="Login"
              BackgroundColor="{StaticResource DarkBackgroundColor}">
 
     <ScrollView>
@@ -72,5 +73,6 @@
         </VerticalStackLayout>
     </ScrollView>
 </ContentPage>
+
 
 
