--- a/WeatherApp/MVVM/Views/LoginView.xaml
+++ b/WeatherApp/MVVM/Views/LoginView.xaml
@@ -3,7 +3,7 @@
              xmlns:local="clr-namespace:WeatherApp.MVVM.Views"
              x:Class="WeatherApp.MVVM.Views.LoginView"
              Title="Login"
-             BackgroundColor="{StaticResource DarkBackgroundColor}">
+             BackgroundColor="{AppThemeBinding Light={StaticResource BackgroundColor}, Dark={StaticResource DarkBackgroundColor}}">
 
     <ScrollView>
         <VerticalStackLayout
@@ -30,48 +30,49 @@
             <Button
                 x:Name="takeProfile"
                 Text="Add Profile Picture"
-                BackgroundColor="{StaticResource DarkAccentColor}"
+                BackgroundColor="{AppThemeBinding Light={StaticResource BackgroundColor}, Dark={StaticResource DarkBackgroundColor}}"
                 Clicked="TakePhoto"
-                TextColor="{StaticResource DarkTextColor}"
+                TextColor="{AppThemeBinding Light={StaticResource TextColor}, Dark={StaticResource DarkTextColor}}"
                 HorizontalOptions="CenterAndExpand" />
 
             <Entry
                 Placeholder="Username"
                 Keyboard="Email"
                 PlaceholderColor="{StaticResource DarkTextColor}"
-                TextColor="{StaticResource DarkTextColor}"
-                BackgroundColor="{StaticResource DarkSecondaryColor}"
+                TextColor="{AppThemeBinding Light={StaticResource TextColor}, Dark={StaticResource DarkTextColor}}"
+                BackgroundColor="{AppThemeBinding Light={StaticResource PrimaryColor}, Dark={StaticResource DarkPrimaryColor}}"
                 Margin="0,0,0,10" />
 
             <Entry
                 Placeholder="Password"
                 IsPassword="True"
                 PlaceholderColor="{StaticResource DarkTextColor}"
-                TextColor="{StaticResource DarkTextColor}"
-                BackgroundColor="{StaticResource DarkSecondaryColor}"
+                TextColor="{AppThemeBinding Light={StaticResource TextColor}, Dark={StaticResource DarkTextColor}}"
+                BackgroundColor="{AppThemeBinding Light={StaticResource PrimaryColor}, Dark={StaticResource DarkPrimaryColor}}"
                 Margin="0,0,0,20" />
 
             <Button
                 Text="Login"
-                BackgroundColor="{StaticResource DarkAccentColor}"
-                TextColor="{StaticResource DarkTextColor}"
+                BackgroundColor="{AppThemeBinding Light={StaticResource SecondaryColor}, Dark={StaticResource DarkSecondaryColor}}"
+                TextColor="{AppThemeBinding Light={StaticResource DarkTextColor}, Dark={StaticResource TextColor}}"
                 HorizontalOptions="CenterAndExpand"
                 Clicked="Button_Clicked"/>
 
             <Label
                 Text="Forgot Password?"
-                TextColor="{StaticResource DarkAccentColor}"
+                TextColor="{AppThemeBinding Light={StaticResource TextColor}, Dark={StaticResource DarkTextColor}}"
                 HorizontalOptions="Center"
                 Margin="0,20,0,0" />
 
             <Label
                 Text="Don't have an account? Sign Up"
-                TextColor="{StaticResource DarkAccentColor}"
+                TextColor="{AppThemeBinding Light={StaticResource TextColor}, Dark={StaticResource DarkTextColor}}"
                 HorizontalOptions="Center"
                 Margin="0,10,0,0" />
 
         </VerticalStackLayout>
     </ScrollView>
+
 </ContentPage>
 
 
