--- a/WeatherApp/Resources/Styles/AppStyles.xaml
+++ b/WeatherApp/Resources/Styles/AppStyles.xaml
@@ -54,14 +54,10 @@
          
     </Style>
 
-
-
-    <Style x:Key="TempHigh" TargetType="Label">
-        <Setter Property="FontAttributes" Value="Bold"/>
-    </Style>
-
-     <Style x:Key="TempLow" TargetType="Label">
-        
+     <Style x:Key="WeatherDate" TargetType="Label">
+         <Setter Property="FontFamily" Value="PoppinsLight"/>
+         <Setter Property="FontSize" Value="Small"/>
+         
     </Style>
 
     <!-- Style for Label elements with a key "WeatherTitle" -->
@@ -83,6 +79,7 @@
         <Setter Property="WidthRequest" Value="150"/>
         
     </Style>
+
 
     
 
