--- a/WeatherApp/MVVM/Views/LoginView.xaml
+++ b/WeatherApp/MVVM/Views/LoginView.xaml
@@ -6,74 +6,89 @@
              BackgroundColor="{AppThemeBinding Light={StaticResource BackgroundColor}, Dark={StaticResource DarkBackgroundColor}}">
 
     <ScrollView>
-        <VerticalStackLayout
-            Spacing="25"
-            Padding="30,0"
-            VerticalOptions="Center">
+        <VerticalStackLayout Spacing="25"
+                             Padding="30,0"
+                             VerticalOptions="Center">
 
-            <Frame
-                HeightRequest="150"
-                WidthRequest="150"
-                CornerRadius="75"
-                BackgroundColor="{StaticResource DarkPrimaryColor}"
-                HorizontalOptions="CenterAndExpand"
-                VerticalOptions="Center">
-                <Image
-                    x:Name="profileImage"
-                    Source="avatar.jpeg"
-                    Aspect="AspectFill"
-                    HeightRequest="150"
-                    WidthRequest="150">
-                </Image>
+            <Frame HeightRequest="150"
+                   WidthRequest="150"
+                   CornerRadius="75"
+                   BackgroundColor="{StaticResource DarkPrimaryColor}"
+                   HorizontalOptions="CenterAndExpand"
+                   VerticalOptions="Center">
+                <Image x:Name="profileImage"
+                       Source="avatar.jpeg"
+                       Aspect="AspectFill"
+                       HeightRequest="150"
+                       WidthRequest="150" />
             </Frame>
 
-            <Button
-                x:Name="takeProfile"
-                Text="Add Profile Picture"
-                BackgroundColor="{AppThemeBinding Light={StaticResource BackgroundColor}, Dark={StaticResource DarkBackgroundColor}}"
-                Clicked="TakePhoto"
-                TextColor="{AppThemeBinding Light={StaticResource TextColor}, Dark={StaticResource DarkTextColor}}"
-                HorizontalOptions="CenterAndExpand" />
+            <Button x:Name="takeProfile"
+                    BackgroundColor="{AppThemeBinding Light={StaticResource PrimaryColor}, Dark={StaticResource DarkPrimaryColor}}"
+                    Clicked="TakePhoto"
+                    HorizontalOptions="CenterAndExpand"
+                    Text="Take Photo"
+                    TextColor="{AppThemeBinding Light={StaticResource TextColor}, Dark={StaticResource DarkTextColor}}">
 
-            <Entry
-                Placeholder="Username"
-                Keyboard="Email"
-                PlaceholderColor="{StaticResource DarkTextColor}"
-                TextColor="{AppThemeBinding Light={StaticResource TextColor}, Dark={StaticResource DarkTextColor}}"
-                BackgroundColor="{AppThemeBinding Light={StaticResource PrimaryColor}, Dark={StaticResource DarkPrimaryColor}}"
-                Margin="0,0,0,10" />
+            </Button>
 
-            <Entry
-                Placeholder="Password"
-                IsPassword="True"
-                PlaceholderColor="{StaticResource DarkTextColor}"
-                TextColor="{AppThemeBinding Light={StaticResource TextColor}, Dark={StaticResource DarkTextColor}}"
-                BackgroundColor="{AppThemeBinding Light={StaticResource PrimaryColor}, Dark={StaticResource DarkPrimaryColor}}"
-                Margin="0,0,0,20" />
+            <Frame CornerRadius="5"
+                   Padding="3"
+                   BackgroundColor="{AppThemeBinding Light=#F0F0F0, Dark=#2C2C2E}"
+                   Margin="0,0,0,10">
+                <Entry Placeholder="Username"
+                       Keyboard="Email"
+                       PlaceholderColor="{StaticResource PlaceholderTextColor}"
+                       TextColor="{AppThemeBinding Light={StaticResource TextColor}, Dark={StaticResource TextColor}}"
+                       BackgroundColor="Transparent" />
+            </Frame>
 
-            <Button
-                Text="Login"
-                BackgroundColor="{AppThemeBinding Light={StaticResource SecondaryColor}, Dark={StaticResource DarkSecondaryColor}}"
-                TextColor="{AppThemeBinding Light={StaticResource DarkTextColor}, Dark={StaticResource TextColor}}"
-                HorizontalOptions="CenterAndExpand"
-                Clicked="Button_Clicked"/>
+            <Frame CornerRadius="5"
+                   Padding="3"
+                   BackgroundColor="{AppThemeBinding Light=#F0F0F0, Dark=#2C2C2E}"
+                   Margin="0,0,0,10">
+                <Entry Placeholder="Password"
+                       IsPassword="True"
+                       PlaceholderColor="{StaticResource PlaceholderTextColor}"
+                       TextColor="{AppThemeBinding Light={StaticResource TextColor}, Dark={StaticResource TextColor}}"
+                       BackgroundColor="Transparent" />
+            </Frame>
 
-            <Label
-                Text="Forgot Password?"
-                TextColor="{AppThemeBinding Light={StaticResource TextColor}, Dark={StaticResource DarkTextColor}}"
-                HorizontalOptions="Center"
-                Margin="0,20,0,0" />
+            <Frame CornerRadius="5"
+                   Padding="3"
+                   BackgroundColor="{AppThemeBinding Light=#F0F0F0, Dark=#2C2C2E}"
+                   Margin="0,0,0,20">
+                <Entry Placeholder="Confirm Password"
+                       IsPassword="True"
+                       PlaceholderColor="{StaticResource PlaceholderTextColor}"
+                       TextColor="{AppThemeBinding Light={StaticResource TextColor}, Dark={StaticResource TextColor}}"
+                       BackgroundColor="Transparent" />
+            </Frame>
 
-            <Label
-                Text="Don't have an account? Sign Up"
-                TextColor="{AppThemeBinding Light={StaticResource TextColor}, Dark={StaticResource DarkTextColor}}"
-                HorizontalOptions="Center"
-                Margin="0,10,0,0" />
+            <Button Text="Login"
+                    BackgroundColor="{AppThemeBinding Light={StaticResource SecondaryColor}, Dark={StaticResource DarkSecondaryColor}}"
+                    TextColor="{AppThemeBinding Light={StaticResource DarkTextColor}, Dark={StaticResource DarkTextColor}}"
+                    HorizontalOptions="CenterAndExpand"
+                    Clicked="Button_Clicked" />
+
+            <Label Text="Forgot Password?"
+                   TextColor="{AppThemeBinding Light={StaticResource TextColor}, Dark={StaticResource DarkTextColor}}"
+                   HorizontalOptions="Center"
+                   Margin="0,10,0,0" />
+
+            <Label Text="Don't have an account? Sign Up"
+                   TextColor="{AppThemeBinding Light={StaticResource TextColor}, Dark={StaticResource DarkTextColor}}"
+                   HorizontalOptions="Center"
+                   Margin="0,10,0,0" />
 
         </VerticalStackLayout>
     </ScrollView>
 
 </ContentPage>
+
+
+
+
 
 
 
