--- a/WeatherApp/MVVM/Views/LoginView.xaml
+++ b/WeatherApp/MVVM/Views/LoginView.xaml
@@ -79,22 +79,15 @@
             </Frame>
 
             <!-- Login Button -->
-            <Button Text="Login"
+            <Button Text="Sign Up"
                     Style="{StaticResource LoginButtons}"
                     BackgroundColor="{AppThemeBinding Light={StaticResource AccentColor}, Dark={StaticResource DarkAccentColor}}"
                     TextColor="{AppThemeBinding Light={StaticResource DarkTextColor}, Dark={StaticResource DarkTextColor}}"
                     HorizontalOptions="CenterAndExpand"
                     Clicked="Button_Clicked"/>
 
-            <!-- Forgot Password Label -->
-            <Label Text="Forgot Password?"
-                   Style="{StaticResource EmailLogin}"
-                   TextColor="{AppThemeBinding Light={StaticResource TextColor}, Dark={StaticResource DarkTextColor}}"
-                   HorizontalOptions="Center"
-                   Margin="0,10,0,0" />
-
             <!-- Sign Up Label -->
-            <Label Text="Don't have an account? Sign Up"
+            <Label Text="Already have an account? Login"
                    Style="{StaticResource EmailLogin}"
                    TextColor="{AppThemeBinding Light={StaticResource TextColor}, Dark={StaticResource DarkTextColor}}"
                    HorizontalOptions="Center"
