--- a/WeatherApp/MVVM/Views/WeatherView.xaml
+++ b/WeatherApp/MVVM/Views/WeatherView.xaml
@@ -21,7 +21,7 @@
     <Frame />
     <SearchBar
         x:Name="searchBar"
-        BackgroundColor="{AppThemeBinding Light=White, Dark=Black }"
+        BackgroundColor="{AppThemeBinding Light=White, Dark=White }"
         Placeholder="Search"
         SearchCommand="{Binding SearchCommand}"
         SearchCommandParameter="{Binding Source={x:Reference searchBar}, Path=Text}"
@@ -47,7 +47,10 @@
 
             <!-- StackLayout for temperature in the second row, second column -->
             <VerticalStackLayout Grid.Column="1" HorizontalOptions="Center" Spacing="10" Style="{StaticResource MainStackLayout}">
-                <Label Style="{StaticResource TemperatureTitle}" Text="{Binding WeatherData.current.temperature_2m, StringFormat='{0}°c'}" TextColor="{AppThemeBinding Light=#0F0A0F, Dark=#F5F0F5}" />
+                <Label Style="{StaticResource TemperatureTitle}"
+                       Text="{Binding WeatherData.current.temperature_2m, StringFormat='{0}°c'}"
+                       TextColor="{AppThemeBinding Light=#0F0A0F, Dark=#F5F0F5}"
+                       SemanticProperties.Description="{StaticResource TemperatureTitle}"/>
             </VerticalStackLayout>
         </Grid>
 
@@ -69,16 +72,7 @@
 
         <!-- CollectionView in the fifth row -->
         <CollectionView Grid.Row="4" ItemsSource="{Binding WeatherData.nextdays}">
-            <!-- Setting the items source as an array of strings -->
-            <!--<CollectionView.ItemsSource>
-                <x:Array Type="{x:Type x:String}">
-                    <x:String>1</x:String>
-                    <x:String>2</x:String>
-                    <x:String>3</x:String>
-                    <x:String>4</x:String>
-                    <x:String>5</x:String>
-                </x:Array>
-            </CollectionView.ItemsSource>-->
+         
 
             <!-- Configuring the layout of collection items -->
             <CollectionView.ItemsLayout>
